Revision history for Catalyst-Action-Fixup-XHTML

0.03    2009.02.09
        replace NEXT by MRO::Compat

0.02	2008.12.17
		fix warnings

0.01    Date/time
        First version, released on an unsuspecting world.
