@@ -6,8 +6,8 @@ use strict;
 our $VERSION = '0.03';
 
 use base 'Catalyst::Action';
+
 use HTTP::Negotiate qw(choose);
-use MRO::Compat;
 
 our $variants = [
     [qw| xhtml 1.000 application/xhtml+xml |],
@@ -17,13 +17,14 @@ our $variants = [
 sub execute {
     my $self = shift;
     my ($controller, $c ) = @_;
-    $self->next::method(@_);
+    $self->NEXT::execute( @_ );
 
-    if ( my $accept = _pragmatic_accept($c) && $c->response->headers->{'content-type'} &&
+    if ($c->request->header('Accept') && $c->response->headers->{'content-type'} &&
         $c->response->headers->{'content-type'} =~ m|text/html|) {
+        my $accept = _pragmatic_accept($c);
         my $headers = $c->request->headers->clone;
         $headers->header('Accept' => $accept);
-        if ( choose($variants, $headers) eq 'xhtml') {
+        if (choose($variants, $headers) eq 'xhtml') {
             $c->response->headers->{'content-type'} =~ s|text/html|application/xhtml+xml|;
         }
     }
@@ -32,11 +33,10 @@ sub execute {
 
 sub _pragmatic_accept {
     my ($c) = @_;
-    my $accept = $c->request->header('Accept') or return;
+    my $accept = $c->request->header('Accept');
     if ($accept =~ m|text/html|) {
         $accept =~ s!\*/\*\s*([,]+|$)!*/*;q=0.5$1!;
-    } 
-    else {
+    } else {
         $accept =~ s!\*/\*\s*([,]+|$)!text/html,*/*;q=0.5$1!;
     }
     return $accept;
