@@ -2,6 +2,7 @@ Revision history for Catalyst-Action-Fixup-XHTML
 
 0.03    2009.02.09
         replace NEXT by MRO::Compat
+        use headers->clone to avoid change the original value
 
 0.02	2008.12.17
 		fix warnings
